--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "https://github.com/rolling-scopes-school/tasks/blob/master/tasks/rslang/rslang.md",
   "main": "index.js",
   "dependencies": {
-    "firebase": "^7.15.1"
+    "firebase": "^7.15.1",
+    "marko": "^4.21.10"
   },
   "devDependencies": {
     "@babel/core": "^7.10.2",
