--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "firebase": "^7.15.1",
-    "marko": "^4.21.10"
+    "swiper": "^5.4.5"
   },
   "devDependencies": {
     "@babel/core": "^7.10.2",
