--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "@shopify/draggable": "^1.0.0-beta.8",
+    "chart.js": "^2.9.3",
     "firebase": "^7.15.1",
     "swiper": "^5.4.5"
   },
